--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kingworldjs/websocket",
+  "name": "@elysiajs/websocket",
   "version": "0.0.0-experimental.7",
-  "description": "A plugin for kingworld that add support for websocket",
+  "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
     "url": "https://github.com/SaltyAom",
@@ -16,12 +16,12 @@
     "kingworld",
     "websocket"
   ],
-  "homepage": "https://github.com/saltyaom/kingworld-websocket",
+  "homepage": "https://github.com/elysiajs/elysia-websocket",
   "repository": {
     "type": "git",
-    "url": "https://github.com/saltyaom/kingworld-websocket"
+    "url": "https://github.com/elysiajs/elysia-websocket"
   },
-  "bugs": "https://github.com/SaltyAom/kingworld-websocket/issues",
+  "bugs": "https://github.com/elysiajs/elysia-websocket/issues",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --config nodemon.json",
@@ -32,7 +32,7 @@
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "kingworld": ">= 0.0.0-experimental.51"
+    "elysia": ">= 0.0.0-experimental.56"
   },
   "devDependencies": {
     "@sinclair/typebox": "0.25.8",
@@ -41,7 +41,7 @@
     "@types/node": "^18.11.7",
     "bun-types": "^0.2.2",
     "eslint": "^8.26.0",
-    "kingworld": "0.0.0-experimental.51",
+    "elysia": "0.0.0-experimental.56",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   },
