--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.0.0-experimental.8",
+  "version": "0.1.0-rc.1",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
     "url": "https://github.com/SaltyAom",
     "email": "saltyaom@gmail.com"
   },
-  "main": "build/index.js",
-  "module": "build/es/index.js",
-  "esnext": "build/es/index.js",
-  "types": "src/index.ts",
-  "typings": "src/index.ts",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/index.js",
+    "node": "./dist/index.js",
+    "default": "./dist/index.js"
+  },
+  "types": "./dist/index.d.ts",
   "keywords": [
     "elysia",
     "websocket"
@@ -24,25 +26,22 @@
   "bugs": "https://github.com/elysiajs/elysia-websocket/issues",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --config nodemon.json",
+    "dev": "bun run --hot example/index.ts",
     "test": "bun wiptest",
-    "build": "npm run build:main && npm run build:es",
-    "build:main": "swc src --config-file .cjs.swcrc -d build",
-    "build:es": "swc src --config-file .es.swcrc -d build/es",
+    "build": "rimraf dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "elysia": ">= 0.0.0-experimental.56"
+    "elysia": ">= 0.1.0-rc.1"
   },
   "devDependencies": {
-    "@sinclair/typebox": "0.25.8",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.11",
+    "@sinclair/typebox": "0.25.10",
     "@types/node": "^18.11.7",
     "bun-types": "^0.2.2",
     "eslint": "^8.26.0",
-    "elysia": "0.0.0-experimental.56",
-    "nodemon": "^2.0.20",
+    "elysia": "^0.1.0-rc.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
