--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.1.0-rc.3",
+  "version": "0.1.0-rc.4",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
     "url": "https://github.com/SaltyAom",
     "email": "saltyaom@gmail.com"
   },
+  "main": "./dist/index.js",
   "exports": {
     "require": "./dist/cjs/index.js",
     "import": "./dist/index.js",
     "node": "./dist/index.js",
     "default": "./dist/index.js"
   },
-  "types": "./dist/index.d.ts",
+  "types": "./src/index.ts",
   "keywords": [
     "elysia",
     "websocket"
