--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.1.0-rc.7",
+  "version": "0.1.0-rc.8",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
@@ -9,7 +9,7 @@
   },
   "main": "./dist/index.js",
   "exports": {
-    "require": "./dist/cjs/index.js",
+    "require": "./dist/index.js",
     "import": "./dist/index.js",
     "node": "./dist/index.js",
     "default": "./dist/index.js"
@@ -29,9 +29,7 @@
   "scripts": {
     "dev": "bun run --hot example/index.ts",
     "test": "bun wiptest",
-    "build": "rimraf dist && npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc --project tsconfig.cjs.json",
-    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "rimraf dist && tsc --project tsconfig.esm.json",
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
@@ -40,7 +38,7 @@
   "devDependencies": {
     "@sinclair/typebox": "0.25.10",
     "@types/node": "^18.11.7",
-    "bun-types": "^0.2.2",
+    "bun-types": "^0.3.0",
     "eslint": "^8.26.0",
     "elysia": "^0.1.0-rc.9",
     "typescript": "^4.8.4"
