--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.1.0-rc.10",
+  "version": "0.1.0",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
