--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
@@ -33,14 +33,14 @@
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "elysia": ">= 0.1.0-rc.9"
+    "elysia": ">= 0.1.0"
   },
   "devDependencies": {
     "@sinclair/typebox": "0.25.10",
     "@types/node": "^18.11.7",
     "bun-types": "^0.3.0",
+    "elysia": "^0.1.2",
     "eslint": "^8.26.0",
-    "elysia": "^0.1.0-rc.9",
     "typescript": "^4.8.4"
   },
   "dependencies": {
