--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.2.6-rc.0",
+  "version": "0.2.6",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
@@ -33,13 +33,13 @@
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "elysia": ">= 0.2.0-rc.1"
+    "elysia": ">= 0.2.0"
   },
   "devDependencies": {
     "@sinclair/typebox": "0.25.21",
     "@types/node": "^18.11.7",
     "bun-types": "^0.5.0",
-    "elysia": "^0.2.0-rc.1",
+    "elysia": "^0.2.0",
     "eslint": "^8.26.0",
     "typescript": "^4.9.3"
   },
