:tada: feat: 0.3 beta 0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,4 +101,5 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
   },
   // "include": ["src/**/*"]
+  "exclude": ["dist"]
 }
