--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/websocket",
-  "version": "0.2.8",
+  "version": "0.3.0-beta.0",
   "description": "Plugin for Elysia that add support for websocket",
   "author": {
     "name": "saltyAom",
@@ -33,18 +33,18 @@
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "elysia": ">= 0.2.2"
+    "elysia": ">= 0.3.0-beta.0",
+    "raikiri": ">= 0.0.0-beta.6"
   },
   "devDependencies": {
     "@sinclair/typebox": "0.25.21",
     "@types/node": "^18.11.7",
-    "bun-types": "^0.5.0",
-    "elysia": "^0.2.2",
+    "bun-types": "^0.5.7",
+    "elysia": "^0.3.0-beta.0",
     "eslint": "^8.26.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "nanoid": "^4.0.0",
-    "raikiri": "^0.0.0-beta.3"
+    "nanoid": "^4.0.0"
   }
 }
